Update pom.xml
chariot-0.0.71
Java 21 (with --enable-preview)