@@ -12,12 +12,12 @@
         <dependency>
             <groupId>io.github.tors42</groupId>
             <artifactId>chariot</artifactId>
-            <version>0.0.69</version>
+            <version>0.0.71</version>
         </dependency>
     </dependencies>
 
     <properties>
-        <maven.compiler.release>17</maven.compiler.release>
+        <maven.compiler.release>21</maven.compiler.release>
     </properties>
 
     <build>
@@ -29,12 +29,24 @@
                 <extensions>true</extensions>
                 <configuration>
                     <launcher>bot=charibot/bot.Main</launcher>
+                    <addOptions>
+                        <addOption>--enable-preview</addOption>
+                    </addOptions>
+                    <compress>2</compress>
+                    <noHeaderFiles>true</noHeaderFiles>
+                    <noManPages>true</noManPages>
+                    <!--<stripDebug>true</stripDebug>-->
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <compilerArg>--enable-preview</compilerArg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
